styles.css
html,
body {
    /* Hiding scrollbar */
    overflow: hidden;
    /* IE and Edge */
    -ms-overflow-style: none;
    /* Firefox */
    scrollbar-width: none;
}

::-webkit-scrollbar {
    /* Chrome, Safari and Opera */
    display: none;
}

.full-height {
    height: 100%;
}

.menu-element {
    text-align: justify;
    overflow: hidden;
    text-overflow: ellipsis;
}

.section.root {
    overflow: hidden;
    height: 100%;
    padding: 0.5% 1% 1%;
}

.columns.root {
    margin: 0;
}

.scrollable {
    overflow: auto;
}

.border-bottom {
    border-bottom: 1px solid rgba(10, 10, 10, .1);
}

.box.mobile-root-padding {
    padding: 1rem .5rem !important;
}

.hero-body.mobile-padding {
    padding: 1.75rem 1.5rem;
}

.justified {
    text-align: justify;
}

.p-4-5 {
    padding: 1.25rem !important;
}

.mjx-chtml {
    font-size: 113% !important;
}

